fix scroll height issue on mobile and many smaller ux improvements

--- a/app/web/src/App.css
+++ b/app/web/src/App.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  height: 100vh;
+  height: var(--vh, 100vh);
   display: flex;
   flex-direction: column;
   align-items: center;
